tup/parse/testdata/error/output/type_declarations.tup
# missing type body
error: expecting "tuple type", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:13

# unclosed tuple type
error: expecting "field name", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:24

# type keyword not followed by tuple body
error: expecting "tuple type", got "Circle"
--> /home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:14

# union type missing variant after pipe
error: expecting "union member", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:28

# tuple type mixed labeled and unlabeled members
error: expecting "field name", got "Int"
--> /home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:29
